# kuka_eki

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  kuka_eki.rosinstall  package.xml  setup.py
krl/: EkiHwInterface.xml  kuka_eki_hw_interface.src  ros_eki.src  ros_eki_sps.xml
kuka_eki/: package.xml  setup.py
kuka_eki/examples/: motion_client.py  state_client.py
kuka_eki/krl/: ros_eki.src  ros_eki_motion.xml  ros_eki_state.xml
kuka_eki/kuka_eki/: __init__.py  eki.py  krl.py  tcp_client.py
kuka_eki_interface/: CMakeLists.txt  package.xml  setup.py
kuka_eki_interface/krl/: ros_eki.xml  ros_eki_sps.sub
kuka_eki_interface/launch/: kuka_eki_interface.launch
kuka_eki_interface/nodes/: eki_node  eki_state_publisher  kuka_eki_interface_node  kuka_eki_state_publisher
kuka_eki_interface/scripts/: eki_sim
kuka_eki_interface/src/kuka_eki/: krl.py
kuka_eki_interface/src/kuka_eki_interface/: __init__.py  conversions.py  eki.py  krl.py  udp_client.py
kuka_eki_interface/test/: test_eki.launch  test_eki.py
kuka_eki_interfaces/: CMakeLists.txt  README.md
kuka_eki_interfaces/msg/: KrlAxis.msg
kuka_eki_msgs/: CMakeLists.txt  package.xml
kuka_eki_msgs/msg/: KrlPos.msg  PtpAxisCmd.msg  PtpCartCmd.msg  PtpCartPoseCmd.msg
kuka_eki_msgs/srv/: LinPos.srv  MovePtpAxis.srv  PtpAxis.srv  PtpPos.srv
launch/: test_eki.launch  test_eki_state_publisher.launch
nodes/: eki_node  eki_state_publisher
src/kuka_eki/: Agilus.py  __init__.py  conversions.py  eki.py  krl.py  transformations.py  udp_client.py
srv/: MoveLinCart.srv  MoveLinCartRel.srv  MovePtpAxis.srv  MovePtpAxisRel.srv  MovePtpCart.srv  StartRsiCart.srv
test/: test_eki.py
