<?xml version="1.0"?>
<package format="2">
  <name>kuka_eki</name>
  <version>0.0.1</version>
  <description>kuka_eki metapackage</description>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <license>BSD 3-Clause</license>

  <url type="repository">https://github.com/tingelst/kuka_eki</url>
  <url type="bugtracker">https://github.com/tingelst/kuka_eki/issues</url>
  <author>Lars Tingelstad</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage />
  </export>
</package>