<?xml version="1.0"?>
<package format="2">
  <name>kuka_eki_msgs</name>
  <version>0.0.1</version>
  <description>Control KUKA robots using the Ethernet.KRL interface</description>
  <author>Lars Tingelstad</author>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/tingelst/kuka_eki_msgs/issues</url>
  <url type="repository">https://github.com/tingelst/kuka_eki_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-catkin-pkg</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>